- Support plot history for ggplot2 plots
- Be less pro-active about fetching structure information on R objects in the workspace		TODO: verify that this fixes our issues with rXML
- Allow to browse arbitrarily deeply nested environments in the object browser

--- Version 0.5.5 - XXX-XX-2011
- Fixed: Crash when several environments on the search path have the same name
- Re-organize the default toolbar actions of the main window
- Detached windows are now restored in detached state when restoring the workplace layout
- Workplace layout is now saved in a separate file, instead of in a hidden object inside the .RData file
- Added R functions rk.save.workplace() and rk.restore.workplace() to save / restore a set of document windows
- RKWard now tries to detect, when a workspace has been moved to a new directory, and adjust the paths restored script editor windows, accordingly
- Fixed: Potential crashes when changing length of a data.frame that is currently opened for editing from R code
- All pages in the package installation dialog now support sorting and keyboard search
- Fixed: Converting from factor to string in the data editor set values to numeric, internally
- Allow entering factor labels instead of only numbers, when editing factors in the data editor
- Display logical values as "TRUE" and "FALSE" in data editor, and accept "T"/"TRUE"/"F"/"FALSE" in addition to "0"/"1" while editing
- Add support for R functions loadhistory(), savehistory(), history(), and timestamp ()
- Do not load .RData file from current directory by default (configurable)
- Fixed: On Windows, a wrong locale for LC_NUMERIC would be applied, resulting in malfunction of pdf() and postscript()
- Fixed: Did not use system configured background color in data editor
- Fixed: New columns would be always be added to the right, instead of to the left, in the data editor
- Fixed: Would crash when trying to edit 0 row data.frame